test/fail/type_error/invalid_assignment.amla
func q(x: i32) {
	y: str = x;
}
